--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CineProwl-Services",
+  "name": "cineprowl-services",
   "version": "0.0.2",
   "description": "CineProwl service layer",
   "author": "Andrew Petersen",
